--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,9 @@
-<h1>Hello from ejs view</h1>
+<html>
+<head>
+        <title>Example Express</title>
+</head>
+<body>
+        <h1>Title: <%= title %>  </h1>
+</body>
+</html>
+
