--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,4 @@
-<html>
-<head>
-        <title>Example Express</title>
-</head>
-<body>
-        <h1>Title: <%= title %>  </h1>
-</body>
-</html>
 
+<% include partials/header %>
+<h1>Title: <%= title %>  </h1> 
+<% include partials/footer %>
