--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,27 @@
 
 <% include partials/header %>
+
+
+
+<h1>Add Customer</h1> 
+<form method="POST" action="/users/add">  
+    <label>First Name   </label> <br>
+    <input type="text" name="first_name">
+    <br>
+    <label>Last Name   </label> <br>
+    <input type="text" name="last_name"> 
+    <br>
+    <input type="submit" name="Submit"> 
+
+
+</form>
+
+
+
 <h1>Title: <%= title %>  </h1> 
+<ul>
+    <% users.forEach( function(u){%> 
+       <li> <%= u.first_name %> <%= u.last_name %>   </li>  
+    <% }) %> 
+</ul>
 <% include partials/footer %>
